--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
 <html lang='en'>
     <head>
-
+        <meta charset='utf-8'>
+        <title>hexy doo</title>
+        <link rel='stylesheet' type='text/css' href='style.css'>
     </head>
     <body>
-        
+        <h1>Convert Hex to Decimal</h1>
+        <div class='hex-box'>
+            <span>A23<sub>16</sub></span>
+        </div>
+        <div class='answer-box'>
+            <input type='text' id='answer' name='answer'>
+        </div>
     </body>
 </html>
